updated html and css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,43 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="">
-    <title>My New Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="sytlesheet" type="text/css" href="./assets/css/style.css">
+  <title>My New Website</title>
 </head>
 
 <body>
+  <header>
+    <nav>
+      <a href="https://github.com/JarettDeSanti/My_New_Website">Github</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
+  <main>
+    <section class="card">
+      <h1>
+        My New Website
+      </h1>
+      <img src="./assets/images/image-1.png">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </section>
+
+    <section class="Contact">
+      <h2>Contact Me</h2>
+      <div id="form">
+        <form>
+          Name: <input type="text"> <br>
+          Email: <input type="text">
+        </form>
+        <button>SEND</button>
+      </div>
+    </section>
+  </main>
+  <br><br>
+  <footer>&copy;My New Website Productions</footer>
 </body>
 
 </html>
