added more style and borders to css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="sytlesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <title>My New Website</title>
 </head>
 
@@ -26,7 +26,7 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
     </section>
 
-    <section class="Contact">
+    <section class="contact">
       <h2>Contact Me</h2>
       <div id="form">
         <form>
@@ -37,8 +37,7 @@
       </div>
     </section>
   </main>
-  <br><br>
-  <footer>&copy;My New Website Productions</footer>
+  <footer>&copy; 2023 My New Website Productions</footer>
 </body>
 
 </html>
